# day5agents

./: .env.example  .gitignore  .gitmodules  NOTICE  README.md  myst.yml  pyproject.toml
day1/: .gitignore  day1a-single-agent.ipynb  day1b-multi-agent.ipynb
day2/: day2a.ipynb  day2b.ipynb
deepdive/adk_litellm/: README.md  agent.py
deepdive/adk_with_mariadb_mcp/: README.md  agent.py  docker-compose.yml
deepdive/adk_with_mariadb_mcp/docker/mariadb/scripts/: 00-init.sql
deepdive/adk_with_mcp/: README.md  agent.py  demo.py
